objects/Unit_of_Measure_UoM_Management__mdt.object
<CustomObject>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Category Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure_Description__c</fullName>
        <label>Unit of Measure Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Unit of Measure (UoM) Management</label>
    <pluralLabel>Unit of Measure (UoM) Management</pluralLabel>
</CustomObject>